--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <title>Parvan S</title>
 
-  <link rel="shortcut icon" href="./assets/img/android-chrome-512x512.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/img/android-chrome-512x512.png" type="image/x-icon">
 
   <link rel="stylesheet" type="text/css" href="themify-icons.css">
 
@@ -291,7 +291,7 @@
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
             <div class="icon">
-              <span class="ti-paint-bucket"></span>
+              <i class="fas fa-desktop"></i>
             </div>
             <div class="caption">
               <h4 class="fg-theme">Web Design</h4>
@@ -304,7 +304,7 @@
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
             <div class="icon">
-              <span class="ti-search"></span>
+              <i class="fas fa-chart-bar"></i>
             </div>
             <div class="caption">
               <h4 class="fg-theme">SEO</h4>
@@ -317,7 +317,7 @@
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
             <div class="icon">
-              <span class="ti-vector"></span>
+              <i class="fas fa-users"></i>
             </div>
             <div class="caption">
               <h4 class="fg-theme">UI/UX Design</h4>
@@ -330,7 +330,7 @@
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
             <div class="icon">
-              <span class="ti-desktop"></span>
+              <i class="fas fa-laptop-code"></i>
             </div>
             <div class="caption">
               <h4 class="fg-theme">Web Development</h4>
