--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <title>Parvan S</title>
 
-  <link rel="shortcut icon" href="assets/img/android-chrome-512x512.png" type="image/x-icon">
+  <link rel="shortcut icon" href="android-chrome-512x512.png" type="image/x-icon">
 
   <link rel="stylesheet" type="text/css" href="themify-icons.css">
 
