--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="container">
         <a href="index.html" class="navbar-brand"><i class="fas fa-code"></i></a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar" aria-expanded="true">
-          <span class="ti-menu"></span>
+          <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="main-navbar">
           <ul class="navbar-nav ml-auto">
@@ -119,7 +119,7 @@
       <h1 class="fw-light mb-4">I'm <b class="fg-theme">Parvan</b> S</h1>
       <div class="badge">Full Stack Developer</div>
     </div> <!-- End Caption header -->
-    <div class="floating-button"><span class="ti-mouse"></span></div>
+    <div class="floating-button"><i class="fas fa-mouse"></i></div>
   </div>
 
   <div class="vg-page page-about" id="about">
