--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
   <!-- Back to top button -->
   <div class="btn-back_to_top">
-    <span class="ti-arrow-up"></span>
+    <i class="fas fa-arrow-up"></i>
   </div>
 
   <!-- Setting button -->
