instagram id changed

--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
             <p>Follow me</p>
             <hr class="divider">
             <ul class="list-unstyled">
-              <li><a href="https://instagram.com/__parvan_?utm_medium=copy_link"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="https://www.instagram.com/thisisparvan/?utm_medium=copy_link"><i class="fab fa-instagram"></i></a></li>
               <li><a href="https://www.facebook.com/Parvan666"><i class="fab fa-facebook"></i></a></li>
               <li><a href="https://twitter.com/P_23666"><i class="fab fa-twitter"></i></a></li>
               <li><a href="https://github.com/parvans"><i class="fab fa-github"></i></a></li>
