--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="row">
         <div class="col-lg-4 py-3">
           <div class="img-place wow fadeInUp">
-            <img src="./assets/img/IMG_5361.JPG" style="height: 349px;" alt="Parvan S img">
+            <img src="./assets/img/p.jpg" style="height: 349px;" alt="Parvan S img">
           </div>
         </div>
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
