--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             <div class="img-caption">
               <h5 class="fg-theme">Portfolio Site</h5>
               <p>Static Websites</p>
-              <a href="https://parvans.github.io/" type="buttom" style="float: right;" class="btn btn-warning">Project Link</a>
+              <a href="https://parvans.github.com/" type="buttom" style="float: right;" class="btn btn-warning">Project Link</a>
             </div>
           </div>
         </div>
@@ -499,7 +499,18 @@
             </div>
           </div>
         </div>
-      </div> <!-- End gridder -->
+        <div class="grid-item ">
+          <div class="img-place">
+            <img src="./assets/img/work/hanoiTower.png" alt="portfolio">
+            <div class="img-caption">
+              <h5 class="fg-theme">Task Tracker</h5>
+              <p>JavaScript</p>
+              <a href="https://github.com/parvans/Task_Tracker" type="buttom" style="float: right;" class="btn btn-warning">Project Link</a>
+            </div>
+          </div>
+        </div>
+      </div> 
+      <!-- End gridder -->
       <!-- <div class="text-center wow fadeInUp">
         <a href="javascript:void(0)" class="btn btn-theme">Load More</a>
       </div> -->
