task tracker word added

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
       <div class="gridder my-3">
         <div class="grid-item ">
           <div class="img-place">
-            <img src="./assets/img/work/portfolio.png" alt="portfolio">
+            <img src="./assets/img/work/portfolio.png" alt="portfolio img">
             <div class="img-caption">
               <h5 class="fg-theme">Portfolio Site</h5>
               <p>Static Websites</p>
@@ -407,7 +407,7 @@
         </div>
         <div class="grid-item ">
           <div class="img-place">
-            <img src="./assets/img/work/ball.png" alt="">
+            <img src="./assets/img/work/ball.png" alt="ball img">
             <div class="img-caption">
               <h5 class="fg-theme">Sumulation Ball Movement</h5>
               <p>JavaScript</p>
@@ -419,7 +419,7 @@
         </div>
         <div class="grid-item ">
           <div class="img-place">
-            <img src="./assets/img/work/2022-02-24 (1).png" alt="">
+            <img src="./assets/img/work/2022-02-24 (1).png" alt="random walk img">
             <div class="img-caption">
               <h5 class="fg-theme">Random Walk</h5>
               <p>JavaScript</p>
@@ -429,7 +429,7 @@
         </div>
         <div class="grid-item ">
           <div class="img-place">
-            <img src="./assets/img/work/boston-data.png" alt="">
+            <img src="./assets/img/work/boston-data.png" alt="boston data img">
             <div class="img-caption">
               <h5 class="fg-theme">Manipulate Boston Data</h5>
               <p>JavaScript</p>
@@ -440,7 +440,7 @@
         
         <div class="grid-item ">
           <div class="img-place">
-            <img src="./assets/img/work/common-words.png" alt="">
+            <img src="./assets/img/work/common-words.png" alt="common word count img">
             <div class="img-caption">
               <h5 class="fg-theme">Word Count</h5>
               <p>JavaScript</p>
@@ -451,7 +451,7 @@
         </div>
         <div class="grid-item ">
           <div class="img-place">
-            <img src="./assets/img/work/pacman.png" alt="">
+            <img src="./assets/img/work/pacman.png" alt="pacman img">
             <div class="img-caption">
               <h5 class="fg-theme">PacMan</h5>
               <p>JavaScript</p>
@@ -461,7 +461,7 @@
         </div>
         <div class="grid-item ">
           <div class="img-place">
-            <img src="./assets/img/work/eyemvmt.png" alt="portfolio">
+            <img src="./assets/img/work/eyemvmt.png" alt="eye movement img">
             <div class="img-caption">
               <h5 class="fg-theme">Eye Movement</h5>
               <p>JavaScript</p>
@@ -471,7 +471,7 @@
         </div>
         <div class="grid-item ">
           <div class="img-place">
-            <img src="./assets/img/work/map.png" alt="portfolio">
+            <img src="./assets/img/work/map.png" alt="map img">
             <div class="img-caption">
               <h5 class="fg-theme">Map manipulation</h5>
               <p>JavaScript</p>
@@ -481,7 +481,7 @@
         </div>
         <div class="grid-item ">
           <div class="img-place">
-            <img src="./assets/img/work/Pacmen.png" alt="portfolio">
+            <img src="./assets/img/work/Pacmen.png" alt="pacman img">
             <div class="img-caption">
               <h5 class="fg-theme">PacMan Project</h5>
               <p>JavaScript</p>
@@ -491,7 +491,7 @@
         </div>
         <div class="grid-item ">
           <div class="img-place">
-            <img src="./assets/img/work/hanoiTower.png" alt="portfolio">
+            <img src="./assets/img/work/hanoiTower.png" alt="hanoi tower img">
             <div class="img-caption">
               <h5 class="fg-theme">Hanoi Tower</h5>
               <p>JavaScript</p>
@@ -501,7 +501,7 @@
         </div>
         <div class="grid-item ">
           <div class="img-place">
-            <img src="./assets/img/work/hanoiTower.png" alt="portfolio">
+            <img src="./assets/img/work/taskTracker.png" alt="task tracker img">
             <div class="img-caption">
               <h5 class="fg-theme">Task Tracker</h5>
               <p>JavaScript</p>
