--- a/index.html
+++ b/index.html
@@ -509,6 +509,17 @@
             </div>
           </div>
         </div>
+        
+        <div class="grid-item ">
+          <div class="img-place">
+            <img src="./assets/img/work/atm.png" alt="atm img">
+            <div class="img-caption">
+              <h5 class="fg-theme">ATM Operation</h5>
+              <p>JavaScript</p>
+              <a href="https://github.com/parvans/Atm_Operation" type="buttom" style="float: right;" class="btn btn-warning">Project Link</a>
+            </div>
+          </div>
+        </div>
       </div> 
       <!-- End gridder -->
       <!-- <div class="text-center wow fadeInUp">
