--- a/index.html
+++ b/index.html
@@ -767,16 +767,16 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 py-3">
-          <div class="footer-info">
+<!--           <div class="footer-info">
             <p>Where to find me</p>
             <hr class="divider">
             <p class="fs-large fg-white">Calicut, Kerala, India</p>
-          </div>
+          </div> -->
         </div>
         <div class="col-md-6 col-lg-3 py-3">
           <div class="float-lg-right">
-            <p>Follow me</p>
-            <hr class="divider">
+<!--             <p>Follow me</p>
+            <hr class="divider"> -->
             <ul class="list-unstyled">
               <li><a href="https://www.instagram.com/thisisparvan/?utm_medium=copy_link"><i class="fab fa-instagram"></i></a></li>
               <li><a href="https://www.facebook.com/Parvan666"><i class="fab fa-facebook"></i></a></li>
@@ -785,7 +785,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 py-3">
+<!--         <div class="col-md-6 col-lg-3 py-3">
           <div class="float-lg-right">
             <p>Contact me</p>
             <hr class="divider">
@@ -793,7 +793,7 @@
               <li>parvansajeevan@gmail.com</li>
               <li>(+91)7356247844</li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="row justify-content-center mt-3">
