--- a/index.html
+++ b/index.html
@@ -134,18 +134,18 @@
           <h1 class="fw-light">Parvan S</h1>
           <h5 class="fg-theme mb-3">Full Stack Developer</h5>
           <p class="text-muted">
-            A competent and committed Web Design and Development graduate looking for a rewarding
-            career in the Information Technology sector. Highly focused with a comprehensive knowledge
-            of designing and developing the layout, visual appearance and usability of a website.
-            Possessing a proven track record of completing projects from the concept through to design,
-            testing, and handover. <br>
-            Eager to learn, easy-going by nature and able to get along with both work colleagues and senior managers. 
-            Currently studying MCA in RVS Collage of Arts & Science .
+            As a full-stack developer with experience as an intern at CODIIS, I am passionate about building robust and user-friendly web applications. With a strong foundation in both front-end and back-end development, I am confident in my ability to take a project from ideation to deployment.
+
+During my time at CODIIS, I honed my skills in various technologies, including React, Node.js, and SQL databases. I contributed to developing several applications, learning best practices for code organization, version control, and agile development methodologies.
+
+I am excited to continue my career in full-stack development, leveraging my skills and experience to build innovative and impactful solutions. Whether working on a team or independently, I am committed to delivering high-quality, scalable applications that meet the needs of users and businesses alike.
+
+If you're looking for a dedicated and skilled full-stack developer to join your team, please don't hesitate to reach out. I would love to connect and discuss how I can contribute to your organization's success.
           </p>
           <ul class="theme-list">
             <li><b>From:</b> Kerala, India</li>
             <li><b>Lives In:</b> Calicut, Kerala</li>
-            <li><b>Age:</b> 22</li>
+            <li><b>Age:</b> 23</li>
             <li><b>Gender:</b> Male</li>
           </ul>
           <!-- <button class="btn btn-theme-outline">Download CV</button> -->
@@ -258,18 +258,18 @@
             </li>
           </ul>
         </div>
-        <!-- <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
+         <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
           <h2 class="fw-normal">Experience</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
-              <div class="title">2017 - Current</div>
+              <div class="title">2023 - Current</div>
               <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                <h5>CODIIS</h5>
+                 <small class="fg-theme">Junior Software Engineer</small>
+                <!--<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>-->
               </div>
             </li>
-            <li>
+           <!-- <li>
               <div class="title">2014</div>
               <div class="details">
                 <h5>Specialize of course</h5>
@@ -284,9 +284,9 @@
                 <small class="fg-theme">University of Study</small>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
               </div>
-            </li>
+            </li>-->
           </ul>
-        </div> -->
+        </div> 
       </div>
     </div>
   </div>
